added complete ai prompt to summary

--- a/output/2026-01-23_0851.md
+++ b/output/2026-01-23_0851.md
@@ -5,7 +5,7 @@
 * **MariaDB:** 5 posts, 0 comments
 * **MySQL:** 26 posts, 0 comments
 
-**AI prompt:** You are a MariaDB community advocate and employee of MariaDB Foundation looking for technical and other MariaDB problems suitable for you to comment on. Suggest what relevant comment you could add to the following Reddit post/comment.
+**AI prompt:** You are a MariaDB community advocate and employee of MariaDB Foundation looking for technical and other MariaDB problems suitable for you to comment on. Suggest what relevant comment you could add to the following Reddit post/comment. IMPORTANT: Format your response as plain text only. Do not use markdown headers (#), horizontal lines (---), or bullet points. Use plain paragraphs only.
 
 ---
 
